# CodeFirstCppDB_sqlgen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  README2.md
Core/include/entities/: Person.h
Core/include/repositories/: IPersonRepository.hpp
Core/source/entities/: Person.cpp
DAL/: CMakeLists.txt
DAL/include/DAL/entities/: Person.hpp  Person_Something.hpp  Something.hpp
DAL/include/DAL/repositories/: PersonRepo.hpp
DAL/include/DAL/repositories/generic/: RepoGen001.hpp
DAL/source/DAL/entities/: Person.hpp  Person_Something.hpp
DAL/tests/: test_DAL.cpp
src/entities/: Person_Something.hpp  Something.hpp
tests/: test_main.cpp
